--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,31 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app
-        version="2.5"
-        xmlns="http://java.sun.com/xml/ns/javaee"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <servlet>
-        <servlet-name>sign</servlet-name>
-        <servlet-class>es.portizsan.SignGuestbookServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>sign</servlet-name>
-        <url-pattern>/sign</url-pattern>
-    </servlet-mapping>
-    <welcome-file-list>
-        <welcome-file>guestbook.jsp</welcome-file>
-    </welcome-file-list>
-    
-    <servlet>
-		<servlet-name>FellowshipMaintenance</servlet-name>
-		<servlet-class>com.bbva.fellowship.tasks.FellowshipMaintenance</servlet-class>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	<welcome-file-list>
+		<welcome-file>guestbook.jsp</welcome-file>
+	</welcome-file-list>
+
+	<servlet>
+		<servlet-name>TweetSearch</servlet-name>
+		<servlet-class>es.portizsan.twitrector.TweetSearchServlet</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
-	<servlet-name>FellowshipMaintenance</servlet-name>
-		<url-pattern>/tasks/fellowship-users</url-pattern>
+		<servlet-name>TweetSearch</servlet-name>
+		<url-pattern>/tasks/tweetsSearch</url-pattern>
 	</servlet-mapping>
-    
-    	<!-- Objectify Filter -->
+
+	<!-- Objectify Filter -->
 	<filter>
 		<filter-name>ObjectifyFilter</filter-name>
 		<filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
@@ -35,6 +26,6 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<listener>
-		<listener-class>es.portizsan.loader.ObjectifyLoader</listener-class>
+		<listener-class>es.portizsan.twitrector.loader.ObjectifyLoader</listener-class>
 	</listener>
 </web-app>
