--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	</properties>
 
 	<prerequisites>
-		<maven>3.1.0</maven>
+		<maven>3.2.3</maven>
 	</prerequisites>
 
 	<dependencies>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.18</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -60,6 +60,11 @@
 			<artifactId>twitter4j-core</artifactId>
 			<version>4.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 
 		<!-- Test Dependencies -->
@@ -78,13 +83,13 @@
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-testing</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.18</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
 			<artifactId>appengine-api-stubs</artifactId>
-			<version>1.9.17</version>
+			<version>1.9.18</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -114,7 +119,7 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<version>3.1</version>
+				<version>3.2</version>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.7</source>
@@ -125,7 +130,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.6</version>
 				<configuration>
 					<archiveClasses>true</archiveClasses>
 					<webResources>
@@ -142,7 +147,7 @@
 			<plugin>
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.17</version>
+				<version>1.9.18</version>
 				<configuration>
 					<enableJarClasses>false</enableJarClasses>
 					<!-- Comment in the below snippet to bind to all IPs instead of just 
