--- a/pom.xml
+++ b/pom.xml
@@ -40,20 +40,17 @@
 		<dependency>
 			<groupId>com.googlecode.objectify</groupId>
 			<artifactId>objectify</artifactId>
-			<version>4.0rc2</version>
-			<scope>compile</scope>
+			<version>5.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>1.18</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-servlet</artifactId>
 			<version>1.18</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.twitter4j</groupId>
@@ -152,11 +149,13 @@
 					<enableJarClasses>false</enableJarClasses>
 					<!-- Comment in the below snippet to bind to all IPs instead of just 
 						localhost -->
-					<!-- address>0.0.0.0</address> <port>8080</port -->
+					<address>0.0.0.0</address>
+					<port>8080</port>
 					<!-- Comment in the below snippet to enable local debugging with a remove 
 						debugger like those included with Eclipse or IntelliJ -->
-					<!-- jvmFlags> <jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag> 
-						</jvmFlags -->
+					<jvmFlags>
+						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
+					</jvmFlags>
 				</configuration>
 			</plugin>
 		</plugins>
